New tools and reference material, moving Lessons, fixing installer

--- a/Help/HTML/About.html
+++ b/Help/HTML/About.html
@@ -165,9 +165,15 @@ License (GPL v2.0): <a href="https://salsa.debian.org/pkg-security-team/btscanne
 Project: <a href="https://gchq.github.io/CyberChef/" rel="nofollow">https://gchq.github.io/CyberChef/</a><br>
 Crown Copyright 2016<br>
 License (Apache Licence, Version 2.0): <a href="https://github.com/gchq/CyberChef/blob/master/LICENSE">https://github.com/gchq/CyberChef/blob/master/LICENSE</a></p>
+<p><strong>Dire Wolf</strong><br>
+Project: <a href="https://github.com/wb2osz/direwolf">https://github.com/wb2osz/direwolf</a><br>
+License (GPL-2.0): <a href="https://github.com/wb2osz/direwolf/blob/master/LICENSE">https://github.com/wb2osz/direwolf/blob/master/LICENSE</a></p>
 <p><strong>Dump1090</strong><br>
 Project: <a href="https://github.com/antirez/dump1090">https://github.com/antirez/dump1090</a><br>
 License (BSD three clause)</p>
+<p><strong>dump978</strong><br>
+Project: <a href="https://github.com/mutability/dump978">https://github.com/mutability/dump978</a><br>
+License (GPL v2.0): <a href="https://github.com/mutability/dump978/blob/master/LICENSE">https://github.com/mutability/dump978/blob/master/LICENSE</a></p>
 <p><strong>Enscribe</strong><br>
 Project: Jason Downer<br>
 Copyright 2004-2008 Jason Downer<br>
@@ -265,6 +271,9 @@ License (MIT): <a href="https://github.com/ainfosec/gr-j2497/blob/maint-3.10/LIC
 Project: <a href="https://github.com/myriadrf/gr-limesdr">https://github.com/myriadrf/gr-limesdr</a><br>
 Copyright 2018 Lime Microsystems<br>
 License (GPL v3.0): <a href="https://github.com/myriadrf/gr-limesdr/blob/master/LICENSE">https://github.com/myriadrf/gr-limesdr/blob/master/LICENSE</a></p>
+<p><strong>gr-mixalot</strong><br>
+Project: <a href="https://github.com/unsynchronized/gr-mixalot">https://github.com/unsynchronized/gr-mixalot</a><br>
+License (GPL v3.0): <a href="https://github.com/unsynchronized/gr-mixalot/blob/main/COPYING">https://github.com/unsynchronized/gr-mixalot/blob/main/COPYING</a></p>
 <p><strong>gr-nrsc5</strong><br>
 Project: <a href="https://github.com/argilo/gr-nrsc5">https://github.com/argilo/gr-nrsc5</a><br>
 License (GPL v3.0): <a href="https://github.com/argilo/gr-nrsc5/blob/master/COPYING">https://github.com/argilo/gr-nrsc5/blob/master/COPYING</a></p>
@@ -309,6 +318,9 @@ Project: <a href="https://github.com/madengr/ham2mon">https://github.com/madengr
 License (GPL-3.0): <a href="https://github.com/madengr/ham2mon/blob/master/LICENSE">https://github.com/madengr/ham2mon/blob/master/LICENSE</a>
 3.8 Fork: <a href="https://github.com/ta6o/ham2mon">https://github.com/ta6o/ham2mon</a>
 3.10 Fork: <a href="https://github.com/bkerler/ham2mon">https://github.com/bkerler/ham2mon</a></p>
+<p><strong>HamClock</strong><br>
+Project: <a href="https://www.clearskyinstitute.com/ham/HamClock/" rel="nofollow">https://www.clearskyinstitute.com/ham/HamClock/</a><br>
+Copyright 2020-2022 Elwood Charles Downey</p>
 <p><strong>hcidump</strong><br>
 Project: <a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a><br>
 Copyright 2000-2016 BlueZ Project<br>
@@ -317,6 +329,9 @@ License (GPL): <a href="http://www.bluez.org/faq/common/" rel="nofollow">http://
 Project: <a href="https://github.com/vanhauser-thc/thc-hydra">https://github.com/vanhauser-thc/thc-hydra</a><br>
 Copyright 2001-2022 by van Hauser / THC<br>
 License (AGPL): <a href="https://github.com/vanhauser-thc/thc-hydra/blob/master/LICENSE">https://github.com/vanhauser-thc/thc-hydra/blob/master/LICENSE</a></p>
+<p><strong>ICE9 Bluetooth Sniffer</strong><br>
+Project: <a href="https://github.com/mikeryan/ice9-bluetooth-sniffer">https://github.com/mikeryan/ice9-bluetooth-sniffer</a><br>
+License (GPL-3.0): <a href="https://github.com/mikeryan/ice9-bluetooth-sniffer/blob/master/LICENSE">https://github.com/mikeryan/ice9-bluetooth-sniffer/blob/master/LICENSE</a></p>
 <p><strong>IMSI-Catcher 4G</strong><br>
 Project: Joe Reith, AIS</p>
 <p><strong>IIO Oscilloscope</strong>
@@ -352,6 +367,10 @@ License (AGPL-3.0): <a href="https://github.com/mrlnc/LTE-ciphercheck/blob/rebas
 <p><strong>m17-cxx-demod</strong><br>
 Project: <a href="https://github.com/mobilinkd/m17-cxx-demod">https://github.com/mobilinkd/m17-cxx-demod</a><br>
 License (GPL-3.0): <a href="https://github.com/mobilinkd/m17-cxx-demod/blob/master/LICENSE">https://github.com/mobilinkd/m17-cxx-demod/blob/master/LICENSE</a></p>
+<p><strong>Meld</strong><br>
+Project: <a href="https://meldmerge.org/" rel="nofollow">https://meldmerge.org/</a><br>
+Copyright 2021 Kai Willadsen<br>
+License (GPL-2.0): <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html" rel="nofollow">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</a></p>
 <p><strong>Metasploit</strong><br>
 Project: <a href="https://www.metasploit.com/" rel="nofollow">https://www.metasploit.com/</a><br>
 Copyright 2006-2020, Rapid7, Inc.<br>
@@ -364,6 +383,9 @@ License (GPL v2.0): <a href="https://salsa.debian.org/minicom-team/minicom/-/blo
 Project: <a href="http://www.whence.com/minimodem/" rel="nofollow">http://www.whence.com/minimodem/</a><br>
 Copyright 2011-2020 by Kamal Mostafa<br>
 License (GPLv3+): <a href="https://www.gnu.org/licenses/gpl-3.0.html" rel="nofollow">https://www.gnu.org/licenses/gpl-3.0.html</a></p>
+<p><strong>mkusb/dus/guidus</strong><br>
+Project: <a href="https://help.ubuntu.com/community/mkusb" rel="nofollow">https://help.ubuntu.com/community/mkusb</a><br>
+License (CC BY-SA 3.0): <a href="https://creativecommons.org/licenses/by-sa/3.0/" rel="nofollow">https://creativecommons.org/licenses/by-sa/3.0/</a></p>
 <p><strong>monitor_rtl433</strong><br>
 Project: <a href="https://github.com/mcbridejc/monitor_rtl433">https://github.com/mcbridejc/monitor_rtl433</a></p>
 <p><strong>multimon-ng</strong><br>
@@ -376,6 +398,10 @@ License (MIT): <a href="https://github.com/chrizator/netattack2/blob/master/LICE
 <p><strong>nrsc5</strong><br>
 Project: <a href="https://github.com/theori-io/nrsc5">https://github.com/theori-io/nrsc5</a><br>
 License (GP: v3.0): <a href="https://github.com/theori-io/nrsc5/blob/master/LICENSE">https://github.com/theori-io/nrsc5/blob/master/LICENSE</a></p>
+<p><strong>nwdiag</strong><br>
+Project: <a href="https://github.com/blockdiag/nwdiag">https://github.com/blockdiag/nwdiag</a>, <a href="http://blockdiag.com/en/index.html" rel="nofollow">http://blockdiag.com/en/index.html</a><br>
+Copyright 2011 Takeshi KOMIYA<br>
+License (Apache Licence, Version 2.0): <a href="https://github.com/blockdiag/nwdiag/blob/master/LICENSE">https://github.com/blockdiag/nwdiag/blob/master/LICENSE</a></p>
 <p><strong>OpenBTS</strong><br>
 Project: <a href="http://openbts.org/" rel="nofollow">http://openbts.org/</a><br>
 License (APGL v3.0): <a href="https://github.com/RangeNetworks/dev/blob/master/LICENSE">https://github.com/RangeNetworks/dev/blob/master/LICENSE</a></p>
@@ -464,6 +490,10 @@ License (BSD-3-Clause): <a href="https://github.com/pavels/spektrum/blob/master/
 <p><strong>srsRAN/srsLTE</strong><br>
 Project: <a href="https://www.srslte.com/" rel="nofollow">https://www.srslte.com/</a><br>
 License (AGPL-3.0): <a href="https://github.com/srsran/srsRAN/blob/master/LICENSE">https://github.com/srsran/srsRAN/blob/master/LICENSE</a></p>
+<p><strong>systemback</strong><br>
+Project: <a href="https://launchpad.net/systemback" rel="nofollow">https://launchpad.net/systemback</a><br>
+License (GNU GPL v3)<br>
+Fork: <a href="https://github.com/BluewhaleRobot/systemback">https://github.com/BluewhaleRobot/systemback</a></p>
 <p><strong>trackerjacker</strong><br>
 Project: <a href="https://github.com/calebmadrigal/trackerjacker">https://github.com/calebmadrigal/trackerjacker</a><br>
 Copyright 2016 Caleb Madrigal<br>
@@ -482,6 +512,10 @@ License (MIT): <a href="https://github.com/twardokus/v2verifier/blob/master/LICE
 <p><strong>Viking</strong><br>
 Project: <a href="https://sourceforge.net/projects/viking/" rel="nofollow">https://sourceforge.net/projects/viking/</a><br>
 License (GPL-2.0): <a href="https://github.com/viking-gps/viking/blob/master/COPYING">https://github.com/viking-gps/viking/blob/master/COPYING</a></p>
+<p><strong>WaveDrom</strong><br>
+Project: <a href="https://wavedrom.com/" rel="nofollow">https://wavedrom.com/</a>, <a href="https://github.com/wavedrom/wavedrom">https://github.com/wavedrom/wavedrom</a><br>
+Copyright 2011-2023 Aliaksei Chapyzhenka<br>
+License (MIT): <a href="https://github.com/wavedrom/wavedrom/blob/trunk/LICENSE">https://github.com/wavedrom/wavedrom/blob/trunk/LICENSE</a></p>
 <p><strong>Waving-Z</strong><br>
 Project: <a href="https://github.com/baol/waving-z">https://github.com/baol/waving-z</a></p>
 <p><strong>Wifite</strong><br>
