New tools and reference material, moving Lessons, fixing installer

--- a/Lessons/HTML/Lesson12_Creating_Bootable_USBs.html
+++ b/Lessons/HTML/Lesson12_Creating_Bootable_USBs.html
@@ -123,8 +123,8 @@
 <p>To launch:</p>
 <p><code>sudo systemback</code></p>
 <p>Select "Live system create" and "Create new"</p>
-<p><a target="_blank" rel="noopener noreferrer" href="./Images/Lesson12_systemback1.png"><img src="./Images/Lesson12_systemback1.png" alt="systemback1" style="max-width: 100%;"></a></p>
-<p><a target="_blank" rel="noopener noreferrer" href="./Images/Lesson12_systemback2.png"><img src="./Images/Lesson12_systemback2.png" alt="systemback2" style="max-width: 100%;"></a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="../Images/Lesson12_systemback1.png"><img src="../Images/Lesson12_systemback1.png" alt="systemback1" style="max-width: 100%;"></a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="../Images/Lesson12_systemback2.png"><img src="../Images/Lesson12_systemback2.png" alt="systemback2" style="max-width: 100%;"></a></p>
 <div id="user-content-guidus"></div>   
 <h2><a id="user-content-guidus" class="anchor" aria-hidden="true" href="#guidus"><span aria-hidden="true" class="octicon octicon-link"></span></a>guidus</h2>
 <p>Mkusb is a tool to create a bootable drive from an iso image or a compressed image file (systemback). It can be used on mass storage devices such as a USB drive, an internal drive, or an eSATA drive. It allows for the creation of persistent (retains data on reboot) and non-persistent USB Linux installations. Separate partitions can be included to maintain generic USB storage functionality outside of the bootable drive.</p>
@@ -134,8 +134,8 @@
 <p>The GUI version of mkusb can be launched with:</p>
 <p><code>sudo guidus</code></p>
 <p>Select "Install (make a boot device)" and follow the prompts to create either a "Live-only" or "Persistent live" USB. Refer to the mkusb link for background information about the specific methods. guidus can also be used to wipe and restore a USB after it is converted to a bootable drive. It is safer to install all necessary software prior to creating the bootable USB to ensure there is enough space and that everything gets installed to the right file system locations.</p>
-<p><a target="_blank" rel="noopener noreferrer" href="./Images/Lesson12_guidus1.png"><img src="./Images/Lesson12_guidus1.png" alt="guidus1" style="max-width: 100%;"></a></p>
-<p><a target="_blank" rel="noopener noreferrer" href="./Images/Lesson12_guidus2.png"><img src="./Images/Lesson12_guidus2.png" alt="guidus2" style="max-width: 100%;"></a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="../Images/Lesson12_guidus1.png"><img src="../Images/Lesson12_guidus1.png" alt="guidus1" style="max-width: 100%;"></a></p>
+<p><a target="_blank" rel="noopener noreferrer" href="../Images/Lesson12_guidus2.png"><img src="../Images/Lesson12_guidus2.png" alt="guidus2" style="max-width: 100%;"></a></p>
 <div id="user-content-bios"></div>   
 <h2><a id="user-content-bios-settings" class="anchor" aria-hidden="true" href="#bios-settings"><span aria-hidden="true" class="octicon octicon-link"></span></a>BIOS Settings</h2>
 <p>Many computers will not have the option to boot from a USB without modifying the BIOS settings. For Dell computers this usually entails enabling Legacy boot ("F2" to access BIOS) and then pressing "F12" to access the one-time boot menu and selecting the USB option. Make sure the BIOS is not locked out and there are no other security measures preventing the computer from booting off the USB.</p>
