CRC RevEng and development tools

--- a/Help/HTML/SoftwareAndConflicts.html
+++ b/Help/HTML/SoftwareAndConflicts.html
@@ -185,6 +185,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -617,6 +626,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>htop</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -840,6 +858,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+</tr>
+<tr>
+<td>openWebRX</td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -1242,6 +1269,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -1534,6 +1567,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -1940,6 +1979,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -2232,6 +2277,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -2638,6 +2689,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -2930,6 +2987,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -3342,6 +3405,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -3636,6 +3705,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>2.2.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.0</td>
 <td align="center">No</td>
@@ -3785,6 +3860,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v0.20.3</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -4065,6 +4146,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -4359,6 +4446,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>2.2.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.0</td>
 <td align="center">No</td>
@@ -4508,6 +4601,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v0.20.3</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -4786,6 +4885,12 @@
 <td>2.1-9</td>
 <td align="center">No</td>
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
+</tr>
+<tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
 </tr>
 <tr>
 <td>CyberChef</td>
@@ -5082,6 +5187,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>3.0.5</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.2</td>
 <td align="center">No</td>
@@ -5231,6 +5342,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v1.2.1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
