CRC RevEng and development tools

--- a/Help/HTML/About.html
+++ b/Help/HTML/About.html
@@ -160,6 +160,10 @@ License (GPL-2.0): <a href="https://github.com/afrantzis/bless/blob/master/COPYI
 <p><strong>btscanner</strong><br>
 Project: <a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a><br>
 License (GPL v2.0): <a href="https://salsa.debian.org/pkg-security-team/btscanner/-/blob/debian/master/COPYING" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner/-/blob/debian/master/COPYING</a></p>
+<p><strong>CRC RevEng</strong><br>
+Project: <a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a><br>
+Copyright 2022 Gegrory Cook<br>
+License (GPL): <a href="https://reveng.sourceforge.io/readme.htm" rel="nofollow">https://reveng.sourceforge.io/readme.htm</a></p>
 <p><strong>CyberChef</strong><br>
 Project: <a href="https://gchq.github.io/CyberChef/" rel="nofollow">https://gchq.github.io/CyberChef/</a><br>
 Crown Copyright 2016<br>
@@ -324,6 +328,9 @@ Copyright 2020-2022 Elwood Charles Downey</p>
 Project: <a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a><br>
 Copyright 2000-2016 BlueZ Project<br>
 License (GPL): <a href="http://www.bluez.org/faq/common/" rel="nofollow">http://www.bluez.org/faq/common/</a></p>
+<p><strong>htop</strong><br>
+Project: <a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a>, <a href="https://htop.dev/" rel="nofollow">https://htop.dev/</a><br>
+License (GPL-2.0): <a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></p>
 <p><strong>Hydra</strong><br>
 Project: <a href="https://github.com/vanhauser-thc/thc-hydra">https://github.com/vanhauser-thc/thc-hydra</a><br>
 Copyright 2001-2022 by van Hauser / THC<br>
@@ -412,6 +419,9 @@ License (GPL v2.0): <a href="https://opencpn.org/wiki/dokuwiki/doku.php?id=openc
 Project: <a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a><br>
 Copyright 2022 by the openHAB Community and the openHAB Foundation e.V.<br>
 License (EPL-2.0): <a href="https://github.com/openhab/openhab-distro/blob/main/LICENSE">https://github.com/openhab/openhab-distro/blob/main/LICENSE</a></p>
+<p><strong>OpenWebRX</strong><br>
+Project: <a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a>, <a href="https://www.openwebrx.de/" rel="nofollow">https://www.openwebrx.de/</a><br>
+License (AGPL-3.0): <a href="https://github.com/jketterl/openwebrx/blob/develop/LICENSE.txt">https://github.com/jketterl/openwebrx/blob/develop/LICENSE.txt</a></p>
 <p><strong>Proxmark3</strong><br>
 Project: <a href="https://github.com/Proxmark/proxmark3">https://github.com/Proxmark/proxmark3</a><br>
 License (GPL-2.0): <a href="https://github.com/Proxmark/proxmark3/blob/master/LICENSE.txt">https://github.com/Proxmark/proxmark3/blob/master/LICENSE.txt</a></p>
