--- a/Help/HTML/SoftwareAndConflicts.html
+++ b/Help/HTML/SoftwareAndConflicts.html
@@ -184,6 +184,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -616,6 +625,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
+<td>htop</td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
@@ -839,6 +857,15 @@
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 <td align="center"><g-emoji class="g-emoji" alias="question" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2753.png">❓</g-emoji></td>
+</tr>
+<tr>
+<td>openWebRX</td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="x" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/274c.png">❌</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
+<td align="center"><g-emoji class="g-emoji" alias="heavy_check_mark" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2714.png">✔️</g-emoji></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -1241,6 +1268,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -1533,6 +1566,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -1939,6 +1978,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -2231,6 +2276,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -2637,6 +2688,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -2929,6 +2986,12 @@
 <td>5.48</td>
 <td align="center">No</td>
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
+</tr>
+<tr>
+<td>htop</td>
+<td>2.1.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
 </tr>
 <tr>
 <td>Hydra</td>
@@ -3341,6 +3404,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -3635,6 +3704,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>2.2.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.0</td>
 <td align="center">No</td>
@@ -3784,6 +3859,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v0.20.3</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -4064,6 +4145,12 @@
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
 </tr>
 <tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
+</tr>
+<tr>
 <td>CyberChef</td>
 <td>-</td>
 <td align="center">Yes</td>
@@ -4358,6 +4445,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>2.2.0</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.0</td>
 <td align="center">No</td>
@@ -4507,6 +4600,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v0.20.3</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
@@ -4785,6 +4884,12 @@
 <td>2.1-9</td>
 <td align="center">No</td>
 <td><a href="https://salsa.debian.org/pkg-security-team/btscanner" rel="nofollow">https://salsa.debian.org/pkg-security-team/btscanner</a></td>
+</tr>
+<tr>
+<td>CRC RevEng</td>
+<td>3.0.5</td>
+<td align="center">Yes</td>
+<td><a href="https://reveng.sourceforge.io/" rel="nofollow">https://reveng.sourceforge.io/</a></td>
 </tr>
 <tr>
 <td>CyberChef</td>
@@ -5081,6 +5186,12 @@
 <td><a href="http://www.bluez.org/" rel="nofollow">http://www.bluez.org/</a></td>
 </tr>
 <tr>
+<td>htop</td>
+<td>3.0.5</td>
+<td align="center">No</td>
+<td><a href="https://github.com/htop-dev/htop">https://github.com/htop-dev/htop</a></td>
+</tr>
+<tr>
 <td>Hydra</td>
 <td>9.2</td>
 <td align="center">No</td>
@@ -5230,6 +5341,12 @@
 <td></td>
 <td align="center">No</td>
 <td><a href="https://www.openhab.org/" rel="nofollow">https://www.openhab.org/</a></td>
+</tr>
+<tr>
+<td>OpenWebRX</td>
+<td>v1.2.1</td>
+<td align="center">No</td>
+<td><a href="https://github.com/jketterl/openwebrx">https://github.com/jketterl/openwebrx</a></td>
 </tr>
 <tr>
 <td>Proxmark3</td>
